# mail-process

./: .gitignore  README.md  package.json  project.md  requirements.md  test-email.html  工作总结_2026-03-10.md
.trae/: README.md
.trae/rules/: projectrule1.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: README.md  main.py
backend/app/api/: README.md  __init__.py  emails.py  quotes.py  reviews.py  settings.py
backend/app/core/: README.md  config.py  database.py
backend/app/models/: README.md  __init__.py  email_feedback.py  quote.py  system_settings.py
backend/app/schemas/: README.md  __init__.py  email.py  feedback.py  quote.py  settings.py
backend/app/services/: README.md  __init__.py  email_cleaner.py  email_extractor.py  email_processor.py  email_rebuilder.py  email_validator.py  llm_client.py  quote_service.py  review_service.py  settings_service.py
docs/: README.md  邮件报价抽取方案讨论稿.md
docs/ADR/: 0001-template.md  README.md
docs/PRD/: README.md  邮件报价抽取PRD.md
docs/TDD/: README.md  邮件报价抽取TDD.md  邮件报价抽取反馈闭环最小可行实现TDD.md
frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  static.html
frontend/src/: App.tsx  README.md  main.tsx
frontend/src/components/: Layout.tsx  README.md
frontend/src/pages/: EmailImport.tsx  EmailProcessing.tsx  QuoteComparison.tsx  QuoteList.tsx  README.md  ReviewQueue.tsx  Settings.tsx
scripts/: README.md  clean-test-data.py  start_backend.sh  start_frontend.sh  test-email-import.py  test-email-processor.py  test-health-check.py  test_data.py
(+4 files in other folders)
