[project]
name = "email-processing-backend"
description = "Email processing backend service"
version = "0.1.0"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pdfplumber>=0.10.0",
    "pypdf2>=3.0.0",
    "pytesseract>=0.3.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["app"] }
